K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:   # selects the template we are createing
    matchLabels:
      app: commandservice
  template: # define what we are deploying
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: sardox/commandservice:latest    ## the actual docker image to deploy
---
## define the cluster service IPs we'll use to allow service to communicate on their private LAN
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
